# AI-Job-Assistant

./: .env  README.md  cover_letter.py  job_results.txt  job_search.py  main.py  my_resume.txt  pyproject.toml  requirements.txt  resume_analyzer.py  youtube_recommender.py
